Atualizei html e css

--- a/holly-dessert/index.html
+++ b/holly-dessert/index.html
@@ -24,9 +24,7 @@
         <section id="tema">
             <h1>Cookies</h1>
             <p>Perfeito como snack ou para compor o café da tarde, essa receita é uma de nossas queridinhas, pois além de ser fácil de fazer, fica uma delícia!</p>
-            <div id="cookie">
-                <!-- A imagem vai no CSS -->
-            </div>
+            <img id="cookie" src="../holly-dessert/imagens/cookies.jpg" alt="Cookies">
         </section>
 
         <section id="info">
