--- a/holly-dessert/index.html
+++ b/holly-dessert/index.html
@@ -24,10 +24,10 @@
         <section id="tema">
             <h1>Cookies</h1>
             <p>Perfeito como snack ou para compor o café da tarde, essa receita é uma de nossas queridinhas, pois além de ser fácil de fazer, fica uma delícia!</p>
-            <img id="cookie" src="../holly-dessert/imagens/cookies.jpg" alt="Cookies">
+            <img id="imagem" src="../holly-dessert/imagens/cookies.jpg" alt="Cookies">
         </section>
 
-        <section id="info">
+        <section class="preparo">
             <h2>Informações</h2>
             <ul>
                 <li>Tempo de preparo: 40 minutos</li>
@@ -36,7 +36,7 @@
             </ul>
         </section>
 
-        <section id="ingrediente">
+        <section class="preparo">
             <h2>Ingredientes</h2>
             <ul>
                 <li>125g de manteiga sem sal em temperatura ambiente;</li>
@@ -50,11 +50,8 @@
             </ul>
         </section>
 
-        <section id="preparo">
+        <section id="cookie">
             <h2>Modo de Preparo</h2>
-            <div>
-                <!-- A imagem vai no CSS -->
-            </div>
             <ol>
                 <li>Misture a manteiga, açúcar mascavo, açúcar e a essência de baunilha.</li>
                 <li>Adicione o ovo batido aos poucos e misture bem.</li>
@@ -64,9 +61,7 @@
                 <li>Forme bolinhas pequenas e asse em forno preaquecido, sobre papel manteiga, por aproximadamente 15 a 20 minutos (250°C).</li>
                 <li>Dica: os cookies se espalham no forno enquanto crescem, portanto as bolinhas devem ser pequenas. O tempo de forno depende, tome cuidado para não queimá-los embaixo.</li>
             </ol>
-            <div>
-                <!-- A imagem vai no CSS -->
-            </div>
+            <img id="imagem" src="../holly-dessert/imagens/cookie-cafe.jpg" alt="Cookies prontos">
         </section>
     </main>
 
