--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holy Kitchen!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="../holy-kitchen/imagens/favicon.ico">
+    <link rel="icon" href="../holy-kitchen/imagens/favicon.ico">
     <link rel="stylesheet" href="./estilos/style.css">
     <link rel="stylesheet" href="./estilos/media-query.css">
 </head>
