--- a/holy-kitchen/login.html
+++ b/holy-kitchen/login.html
@@ -40,6 +40,31 @@
                 background: url(imagens/background-v2.png) repeat;
                 background-size: contain;;
             }
+
+            section#login {
+                width: 950px;
+                height: 350px;
+            }
+
+            section#login > div#imagem {
+                float: left;
+                width: 50%;
+                height: 100%;
+            }
+
+            section#login > div#login-form {
+                float: right;
+                width: 50%;
+            }
+
+            div#login-form > h1 {
+                font-size: 2em;
+            }
+
+            div#login-form > p {
+                font-size: 1em;
+                margin: 5px;
+            }
         }
 
     </style>
@@ -51,7 +76,7 @@
             <div id="menu">
                 <button id="burguer"><span class="material-icons">menu</span></button>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Receitas Salgadas</a></li>
                     <li><a href="#">Receitas Doces</a></li>
                     <li><a href="#">Contato</a></li>
