--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -6,8 +6,8 @@
     <title>Holy Kitchen!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="../holy-kitchen/imagens/favicon.ico">
-    <link rel="stylesheet" href="./estilos/style.css">
-    <link rel="stylesheet" href="./estilos/media-query.css">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 
 <body>
