--- a/holy-kitchen/cookies.html
+++ b/holy-kitchen/cookies.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookies!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" href="../holy-kitchen/imagens/favicon.ico">
+    <link rel="icon" href="imagens/favicon.ico">
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/cookie.css">
+    <link rel="stylesheet" href="estilos/destaque.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <div id="menu">
-                <button id="burguer"><span class="material-icons">menu</span></button>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
+            <div class="menu">
+                <button id="menu-btn"><span class="material-icons">menu</span></button>
+                <ul id="menu-list">
+                    <li><a href="#">Home</a></li>
                     <li><a href="#">Receitas Salgadas</a></li>
                     <li><a href="#">Receitas Doces</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
             </div>
-            <h1 id="titulo">Holy Kitchen!</h1>
+            <h1 id="site-nome"><a href="index.html">Holy Kitchen!</a></h1>
             <div id="login-icon">
-                <a href="../holy-kitchen/login/login.html"><span class="material-icons">person</span></a>
+                <a href="login.html"><span class="material-icons">person</span></a>
             </div>
         </nav>
     </header>
 
     <main>
         <div>
-            <h1>Cookies!</h1>
-            <p>Perfeito como snack ou para compor o café da tarde, essa receita é uma de nossas queridinhas, pois além de ser fácil de fazer, fica uma delícia!</p>
+            <div>
+                <h2>Cookies!</h2>
+                <p>Prepare-se para se deliciar com os melhores cookies com gotas de chocolate que você já experimentou! Crocantes por fora e macios por dentro, esses cookies são repletos de pedaços de chocolate derretido que vão deixar qualquer um com água na boca. Perfeitos para acompanhar um café ou para aqueles momentos em que você precisa de um doce irresistível, esses cookies são pura tentação!</p>
 
-            <h2>Informações</h2>
-            <ul>
-                <li>Tempo de preparo: 40 minutos</li>
-                <li>Rendimento: 22 porções</li>
-            </ul>
+                <h3>Informações</h3>
+                <ul>
+                    <li>Tempo de preparo: 40 minutos</li>
+                    <li>Rendimento: 22 porções</li>
+                </ul>
+            </div>
+            
+            <div>
+                <picture>
+                    <source media="(max-width: 670px)" srcset="imagens/cookies-pq.jpeg">
+                    <img src="imagens/cookies.jpeg" alt="Cookies" title="Cookies com gotas de chocolate, nham!">
+                </picture>
+            </div>
         </div>
 
-        <div>
-            <picture>
-                <source media="(max-width: 670px)" srcset="imagens/cookie-pq.jpg">
-                <img src="imagens/cookie.jpg" alt="Cookies">
-            </picture>
-        </div>
-
-        <section>
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>125g de manteiga sem sal em temperatura ambiente;</li>
-                <li>1/2 xícara de açucar mascavo;</li>
-                <li>1 e 3/4 de xícara de farinha de trigo;</li>
-                <li>300g de chocolate meio amargo picado;</li>
-                <li>3/4 xícara de açucar;</li>
-                <li>1 ovo;</li>
-                <li>1 colher (chá) de fermento em pó;</li>
-                <li>1 colher (chá) de essência de baunilha.</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Modo de Preparo</h2>
-            <ul>
-                <li>Misture a manteiga, açúcar mascavo, açúcar e a essência de baunilha.</li>
-                <li>Adicione o ovo batido aos poucos e misture bem.</li>
-                <li>Acrescente a farinha aos poucos e misture bem (pode ser a mão ou na batedeira planetária).</li>
-                <li>Por último, adicione o fermento e misture só para incorporá-lo à massa.</li>
-                <li>Depois da massa bem misturada, adicione o chocolate picado.</li>
-                <li>Forme bolinhas pequenas e asse em forno preaquecido, sobre papel manteiga, por aproximadamente 15 a 20 minutos (250°C).</li>
-                <li>Dica: os cookies se espalham no forno enquanto crescem, portanto as bolinhas devem ser pequenas. O tempo de forno depende, tome cuidado para não queimá-los embaixo.</li>
-            </ul>
-        </section>
+        <article>
+            <section>
+                <h3>Ingredientes</h3>
+                <ul>
+                    <li>125g de manteiga sem sal em temperatura ambiente;</li>
+                    <li>1/2 xícara de açucar mascavo;</li>
+                    <li>1 e 3/4 de xícara de farinha de trigo;</li>
+                    <li>300g de chocolate meio amargo picado;</li>
+                    <li>3/4 xícara de açucar;</li>
+                    <li>1 ovo;</li>
+                    <li>1 colher (chá) de fermento em pó;</li>
+                    <li>1 colher (chá) de essência de baunilha.</li>
+                </ul>
+            
+                <h3>Modo de Preparo</h3>
+                <ul>
+                    <li>Misture a manteiga, açúcar mascavo, açúcar e a essência de baunilha.</li>
+                    <li>Adicione o ovo batido aos poucos e misture bem.</li>
+                    <li>Acrescente a farinha aos poucos e misture bem (pode ser a mão ou na batedeira planetária).</li>
+                    <li>Por último, adicione o fermento e misture só para incorporá-lo à massa.</li>
+                    <li>Depois da massa bem misturada, adicione o chocolate picado.</li>
+                    <li>Forme bolinhas pequenas e asse em forno preaquecido, sobre papel manteiga, por aproximadamente 15 a 20 minutos (250°C).</li>
+                    <li>Dica: os cookies se espalham no forno enquanto crescem, portanto as bolinhas devem ser pequenas. O tempo de forno depende, tome cuidado para não queimá-los embaixo.</li>
+                </ul>
+            </section>
+        </article>
     </main>
 
     <footer>
