--- a/holy-kitchen/piquenique.html
+++ b/holy-kitchen/piquenique.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piquenique</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" href="../holy-kitchen/imagens/favicon.ico">
+    <link rel="icon" href="imagens/favicon.ico">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/piquenique.css">
 </head>
@@ -13,40 +13,39 @@
 <body>
     <header>
         <nav>
-            <div id="menu">
-                <button id="burguer"><span class="material-icons">menu</span></button>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
+            <div class="menu">
+                <button id="menu-btn"><span class="material-icons">menu</span></button>
+                <ul id="menu-list">
+                    <li><a href="#">Home</a></li>
                     <li><a href="#">Receitas Salgadas</a></li>
                     <li><a href="#">Receitas Doces</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
             </div>
-            <h1 id="titulo">Holy Kitchen!</h1>
+            <h1 id="site-nome"><a href="index.html">Holy Kitchen!</a></h1>
             <div id="login-icon">
-                <a href="../holy-kitchen/login/login.html"><span class="material-icons">person</span></a>
+                <a href="login.html"><span class="material-icons">person</span></a>
             </div>
         </nav>
     </header>
 
     <main>
-        <div>
+        <article>
             <div>
-                <h1>Planejando um Piquenique?</h1>
-                <p>Sendo em família, amigos ou até só, piquenique é uma ótima escolha para apreciar o ar livre e boa comida. E para montar uma cesta de piquenique, é importante pensar em praticidade, variedade e em como manter os alimentos frescos. Aqui estão algumas sugestões:</p>
+                <h2>Planejando um Piquenique?</h2>
+                <p>Preparar o piquenique perfeito é mais fácil do que você imagina! Confira nossas dicas essenciais de alimentos, utensílios e tudo o que você precisa para aproveitar momentos deliciosos ao ar livre, sem deixar nada de fora.</p>
             </div>
-
             <div>
                 <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/piquenique1-pq.jpg">
-                    <img src="imagens/piquenique1.jpg" alt="Piquenique">
+                    <source media="(max-width: 670px)" srcset="imagens/piquenique-pq.jpg">
+                    <img src="imagens/piquenique.jpg" alt="Piquenique" title="Dicas para o seu piquenique!">
                 </picture>
             </div>
-        </div>
+        </article>
 
         <section>
-            <h2>Alimentos</h2>
-            <ul type="disc">
+            <h3>Alimentos</h3>
+            <ul>
                 <li>Sanduíches ou wraps: fáceis e comer e transportar.</li>
                 <li>Frutas frescas: como uvas, maçãs, morangos ou fatias de melancia.</li>
                 <li>Queijos e frios: queijo brie, gouda, presunto ou salame.</li>
@@ -56,10 +55,8 @@
                 <li>Bebidas: sucos, água, chá gelado ou vinho (não se esqueça do abridor de garrafas).</li>
                 <li>Sobremesas: brownies, cookies, ou cupcakes.</li>
             </ul>
-        </section>
 
-        <section>
-            <h2>Utensílios</h2>
+            <h3>Utensílios</h3>
             <ul>
                 <li>Toalha de piquenique: grande o suficiente para todos se sentarem.</li>
                 <li>Talheres, pratos e copos: preferencialmente reutilizáveis.</li>
@@ -67,9 +64,7 @@
                 <li>Abridor de garrafas e saca-rolhas.</li>
                 <li>Recipientes herméticos: para evitar vazamentos.</li>
             </ul>
-        </section>
 
-        <section>
             <h2>Extras</h2>
             <ul>
                 <li>Repelente de insetos e protetor solar.</li>
