--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -6,7 +6,7 @@
     <title>Holy Kitchen!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/global.css">
     <link rel="stylesheet" href="estilos/index.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
