--- a/holy-kitchen/login.html
+++ b/holy-kitchen/login.html
@@ -6,68 +6,8 @@
     <title>Login</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/global.css">
     <link rel="stylesheet" href="estilos/login.css">
-
-    <style>
-
-        @media screen and (min-width: 769px) and (max-width: 992px) {
-            body {
-                background: url(imagens/background-v2.png) repeat;
-                background-size: contain;
-            }
-
-            section#login {
-                width: 80vw;
-                height: 350px;
-            }
-
-            section#login > div#imagem {
-                background-position: left top;
-                float: left;
-                width: 30%;
-                height: 100%;
-            }
-
-            section#login > div#login-form {
-                float: right;
-                width: 70%;
-            }
-        }
-
-        @media screen and (min-width: 992px) {
-            body {
-                background: url(imagens/background-v2.png) repeat;
-                background-size: contain;;
-            }
-
-            section#login {
-                width: 950px;
-                height: 350px;
-            }
-
-            section#login > div#imagem {
-                float: left;
-                width: 50%;
-                height: 100%;
-            }
-
-            section#login > div#login-form {
-                float: right;
-                width: 50%;
-            }
-
-            div#login-form > h1 {
-                font-size: 2em;
-            }
-
-            div#login-form > p {
-                font-size: 1em;
-                margin: 5px;
-            }
-        }
-
-    </style>
 </head>
 
 <body>
@@ -102,14 +42,14 @@
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <h3>E-mail</h3>
-                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
                     </div>
 
                     <div class="campo">
                         <h3>Senha</h3>
-                        <input type="password" name="Senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
+                        <input type="password" name="Senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                     </div>
 
                     <input type="submit" value="Entrar"><br>
