--- a/holy-kitchen/pressa.html
+++ b/holy-kitchen/pressa.html
@@ -6,7 +6,7 @@
     <title>Está com pressa?</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/global.css">
     <link rel="stylesheet" href="estilos/pressa.css">
 </head>
 <body>
