--- a/holy-kitchen/publique.html
+++ b/holy-kitchen/publique.html
@@ -6,7 +6,7 @@
     <title>Publique Sua Receita!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
-    <link rel="stylesheet" href="./estilos/style.css">
+    <link rel="stylesheet" href="./estilos/global.css">
     <link rel="stylesheet" href="./estilos/publique.css">
 </head>
 
@@ -30,6 +30,7 @@
     </header>
 
     <main>
+        
         <div>
             <picture>
                 <source media="(max-width: 670px)" srcset="imagens/publique-pq.jpeg">
