Alterei e atualizei projeto

--- a/holy-kitchen/cookies.html
+++ b/holy-kitchen/cookies.html
@@ -6,6 +6,7 @@
     <title>Cookies!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
+    <link rel="stylesheet" href="estilos/header.css">
     <link rel="stylesheet" href="estilos/global.css">
     <link rel="stylesheet" href="estilos/destaque.css">
 </head>
@@ -34,6 +35,10 @@
             <div>
                 <h2>Cookies!</h2>
                 <p>Prepare-se para se deliciar com os melhores cookies com gotas de chocolate que você já experimentou! Crocantes por fora e macios por dentro, esses cookies são repletos de pedaços de chocolate derretido que vão deixar qualquer um com água na boca. Perfeitos para acompanhar um café ou para aqueles momentos em que você precisa de um doce irresistível, esses cookies são pura tentação!</p>
+
+                <br>
+                <hr>
+                <br>
 
                 <h3>Informações</h3>
                 <ul>
