--- a/holy-kitchen/piquenique.html
+++ b/holy-kitchen/piquenique.html
@@ -6,6 +6,7 @@
     <title>Piquenique</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
+    <link rel="stylesheet" href="estilos/header.css">
     <link rel="stylesheet" href="estilos/global.css">
     <link rel="stylesheet" href="estilos/piquenique.css">
 </head>
@@ -35,6 +36,11 @@
                 <h2>Planejando um Piquenique?</h2>
                 <p>Preparar o piquenique perfeito é mais fácil do que você imagina! Confira nossas dicas essenciais de alimentos, utensílios e tudo o que você precisa para aproveitar momentos deliciosos ao ar livre, sem deixar nada de fora.</p>
             </div>
+
+            <br>
+            <hr>
+            <br>
+
             <div>
                 <picture>
                     <source media="(max-width: 670px)" srcset="imagens/piquenique-pq.jpg">
