--- a/holy-kitchen/publique.html
+++ b/holy-kitchen/publique.html
@@ -6,6 +6,7 @@
     <title>Publique Sua Receita!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
+    <link rel="stylesheet" href="estilos/header.css">
     <link rel="stylesheet" href="./estilos/global.css">
     <link rel="stylesheet" href="./estilos/publique.css">
 </head>
@@ -40,6 +41,10 @@
             <p>Tem uma receita incrível que faz sucesso entre seus amigos e familiares? Compartilhe seu talento culinário com o mundo! Envie sua receita e inspire outros apaixonados por gastronomia a experimentar algo novo e delicioso.</p><br>
             <p>Após o envio do seu formulário, nossa equipe irá avaliar suas informações cuidadosamente. Assim que sua receita for aprovada, você receberá um e-mail de confirmação e, em poucos dias, sua receita será publicada no nosso site.</p>
         </div>
+
+        <br>
+        <hr>
+        <br>
 
         <section>
             <form action="form.php" method="post" autocomplete="off">
