--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -6,6 +6,7 @@
     <title>Holy Kitchen!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
+    <link rel="stylesheet" href="estilos/header.css">
     <link rel="stylesheet" href="estilos/global.css">
     <link rel="stylesheet" href="estilos/index.css">
     <link rel="stylesheet" href="estilos/media-query.css">
@@ -33,14 +34,13 @@
     <main>
         <section id="main">
             <h2>Bem-vindo ao Holy Kitchen!</h2>
-            <p>Aqui você encontra as melhores receitas para os mais diversos gostos.</p>
+            <p>Aqui você encontra as melhores receitas para os mais diversos gostos!</p>
         </section>
 
-        <br>
         <hr>
         <br>
         
-        <section>
+        <section id="publique">
             <a href="publique.html">
                 <picture>
                     <source media="(max-width: 670px)" srcset="imagens/publique-pq.jpeg">
@@ -51,7 +51,7 @@
         </section>
 
         <section>
-            <h2><span class="linha"></span>Destaques da Semana <span class="linha"></span></h2>
+            <h2 class="linha">Destaques da Semana</h2>
 
             <div>
                 <article>
@@ -77,7 +77,7 @@
         </section>
 
         <section>
-            <h2><span class="linha"></span>Dica Boa é Dica Compartilhada <span class="linha"></span></h2>
+            <h2 class="linha">Dica Boa é Dica Compartilhada</h2>
 
             <div>
                 <article>
