--- a/holy-kitchen/tomate.html
+++ b/holy-kitchen/tomate.html
@@ -6,6 +6,7 @@
     <title>Cookies!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
+    <link rel="stylesheet" href="estilos/header.css">
     <link rel="stylesheet" href="estilos/global.css">
     <link rel="stylesheet" href="estilos/destaque.css">
 </head>
@@ -34,6 +35,10 @@
             <div>
                 <h2>Sopa de Tomate</h2>
                 <p>Desfrute do sabor irresistível da nossa sopa de tomate, uma combinação perfeita de tomates frescos e ervas aromáticas que vai aquecer seu coração. Simples de preparar e incrivelmente deliciosa, esta sopa é o conforto que você procura em dias frios ou sempre que quiser algo leve e saboroso. Experimente e surpreenda-se com a riqueza de sabores!</p>
+
+                <br>
+                <hr>
+                <br>
 
                 <h3>Informações</h3>
                 <ul>
