--- a/holy-kitchen/cookies.html
+++ b/holy-kitchen/cookies.html
@@ -33,6 +33,13 @@
     <main>
         <div>
             <div>
+                <picture>
+                    <source media="(max-width: 670px)" srcset="imagens/cookies-pq.jpeg">
+                    <img src="imagens/cookies.jpeg" alt="Cookies" title="Cookies com gotas de chocolate, nham!">
+                </picture>
+            </div>
+
+            <div>
                 <h2>Cookies!</h2>
                 <p>Prepare-se para se deliciar com os melhores cookies com gotas de chocolate que você já experimentou! Crocantes por fora e macios por dentro, esses cookies são repletos de pedaços de chocolate derretido que vão deixar qualquer um com água na boca. Perfeitos para acompanhar um café ou para aqueles momentos em que você precisa de um doce irresistível, esses cookies são pura tentação!</p>
 
@@ -40,24 +47,18 @@
                 <hr>
                 <br>
 
-                <h3>Informações</h3>
-                <ul>
+                <h3 class="info">Informações</h3>
+                <ul class="info-list">
                     <li>Tempo de preparo: 40 minutos</li>
                     <li>Rendimento: 22 porções</li>
                 </ul>
             </div>
             
-            <div>
-                <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/cookies-pq.jpeg">
-                    <img src="imagens/cookies.jpeg" alt="Cookies" title="Cookies com gotas de chocolate, nham!">
-                </picture>
-            </div>
         </div>
 
         <article>
             <section>
-                <h3>Ingredientes</h3>
+                <h3 class="linha">Ingredientes</h3>
                 <ul>
                     <li>125g de manteiga sem sal em temperatura ambiente;</li>
                     <li>1/2 xícara de açucar mascavo;</li>
@@ -69,7 +70,7 @@
                     <li>1 colher (chá) de essência de baunilha.</li>
                 </ul>
             
-                <h3>Modo de Preparo</h3>
+                <h3 class="linha">Modo de Preparo</h3>
                 <ul>
                     <li>Misture a manteiga, açúcar mascavo, açúcar e a essência de baunilha.</li>
                     <li>Adicione o ovo batido aos poucos e misture bem.</li>
