--- a/holy-kitchen/tomate.html
+++ b/holy-kitchen/tomate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookies!</title>
+    <title>Sopa de Tomate!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
     <link rel="stylesheet" href="estilos/header.css">
@@ -33,6 +33,13 @@
     <main>
         <div>
             <div>
+                <picture>
+                    <source media="(max-width: 670px)" srcset="imagens/tomate-pq.jpeg">
+                    <img src="imagens/tomate.jpeg" alt="Sopa de tomate" title="Sopa de tomates, nham!">
+                </picture>
+            </div>
+
+            <div>
                 <h2>Sopa de Tomate</h2>
                 <p>Desfrute do sabor irresistível da nossa sopa de tomate, uma combinação perfeita de tomates frescos e ervas aromáticas que vai aquecer seu coração. Simples de preparar e incrivelmente deliciosa, esta sopa é o conforto que você procura em dias frios ou sempre que quiser algo leve e saboroso. Experimente e surpreenda-se com a riqueza de sabores!</p>
 
@@ -40,24 +47,17 @@
                 <hr>
                 <br>
 
-                <h3>Informações</h3>
-                <ul>
+                <h3 class="info">Informações</h3>
+                <ul class="info-list">
                     <li>Tempo de preparo: 1 hora e 10 minutos</li>
                     <li>Rendimento: 8 porções</li>
                 </ul>
-            </div>
-
-            <div>
-                <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/tomate-pq.jpeg">
-                    <img src="imagens/tomate.jpeg" alt="Sopa de tomate" title="Sopa de tomates, nham!">
-                </picture>
             </div>
         </div>
 
         <article>
             <section>
-                <h3>Ingredientes</h3>
+                <h3 class="linha">Ingredientes</h3>
                 <ul>
                     <li>3 colheres (sopa) de azeite de oliva (45ml)</li>
                     <li>1 cebola grande picada (cerca de 150g)</li>
@@ -70,7 +70,7 @@
                     <li>8 folhinhas de manjericão para finalizar</li>
                 </ul>
             
-                <h3>Modo de Preparo</h3>
+                <h3 class="linha">Modo de Preparo</h3>
                 <ul>
                     <li>Numa panela grande, aqueça o azeite de oliva e refogue a cebola e o alho até murcharem.</li>
                     <li>Junte o tomate picado e o caldo de galinha. Cozinha até ferver. Abaixe o fogo e cozinhe até os tomates ficarem macios (cerca de 30minutos).</li>
