--- a/holy-kitchen/cookies.html
+++ b/holy-kitchen/cookies.html
@@ -41,7 +41,7 @@
 
             <div>
                 <h2>Cookies!</h2>
-                <p>Prepare-se para se deliciar com os melhores cookies com gotas de chocolate que você já experimentou! Crocantes por fora e macios por dentro, esses cookies são repletos de pedaços de chocolate derretido que vão deixar qualquer um com água na boca. Perfeitos para acompanhar um café ou para aqueles momentos em que você precisa de um doce irresistível, esses cookies são pura tentação!</p>
+                <p>Prepare-se para se deliciar com os melhores cookies com gotas de chocolate que você já experimentou! Perfeitos para acompanhar um café ou para aqueles momentos em que você precisa de um doce irresistível, esses cookies são pura tentação!</p>
 
                 <br>
                 <hr>
@@ -82,6 +82,14 @@
                 </ul>
             </section>
         </article>
+
+        <br>
+        <hr>
+        <br>
+
+        <p class="veja-tambem">
+            Veja também: <a href="piquenique.html"> Dicas para preparar o melhor piquenique ao ar livre!</a>
+        </p>
     </main>
 
     <footer>
