--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -43,8 +43,8 @@
         <section id="publique">
             <a href="publique.html">
                 <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/publique-pq.jpeg">
-                    <img src="imagens/publique.jpeg" alt="Publique sua Receita" title="Publique sua receita!">
+                    <source media="(max-width: 670px)" srcset="imagens/receita-pq.jpeg">
+                    <img src="imagens/receita.jpeg" alt="Publique sua Receita" title="Publique sua receita!">
                 </picture>
                 <h2>Publique sua Receita!</h2>
             </a>
