--- a/holy-kitchen/piquenique.html
+++ b/holy-kitchen/piquenique.html
@@ -83,6 +83,14 @@
         <br>
 
         <p>Lembre-se de verificar as condições do tempo e a localização para garantir que o piquenique seja confortável e agradável!</p>
+
+        <br>
+        <hr>
+        <br>
+
+        <p class="veja-tambem">
+            Veja também: <a href="pressa.html">Receitas rápidas e fáceis para quem está sem tempo!</a>
+        </p>
     </main>
 
 
