--- a/holy-kitchen/pressa.html
+++ b/holy-kitchen/pressa.html
@@ -50,6 +50,14 @@
 
         <article>
             <div>
+
+                <div>
+                    <picture>
+                        <source media="(max-width: 670px)" srcset="imagens/espaguete-pq.jpeg">
+                        <img src="imagens/espaguete.jpeg" alt="Espaguete alho e oleo" title="Prato de espaguete alho e óleo envolto de ingredientes">
+                    </picture>
+                </div>
+
                 <div>
                     <h3>Espaguete alho e óleo</h3>
                     <p>Um prato clássico, fácil e rápido de preparar, perfeito para qualquer ocasião.</p>
@@ -64,14 +72,7 @@
                         <li>Sal e pimenta a gosto</li>
                         <li>Queijo parmesão ralado (opcional)</li>
                     </ul>
-                </div>
-                
-                <div>
-                    <picture>
-                        <source media="(max-width: 670px)" srcset="imagens/espaguete-pq.jpeg">
-                        <img src="imagens/espaguete.jpeg" alt="Espaguete alho e oleo" title="Prato de espaguete alho e óleo envolto de ingredientes">
-                    </picture>
-                </div>
+                </div>    
             </div>
 
             <section>
@@ -92,6 +93,13 @@
         <article>
             <div>
                 <div>
+                    <picture>
+                        <source media="(max-width: 670px)" srcset="imagens/smoothie-pq.jpeg">
+                        <img src="imagens/smoothie.jpeg" alt="Smoothie" title="Copo de smoothie de banana e morango">
+                    </picture>
+                </div>
+
+                <div>
                     <h3>Smoothie de morango e banana</h3>
                     <p>Refresque-se com um smoothie cremoso de banana e morango, a combinação perfeita de sabor e praticidade em um só copo!</p>
 
@@ -105,13 +113,6 @@
                         <li>Adoçante ou açúcar a gosto</li>
                         <li>Gelo a gosto</li>
                     </ul>
-                </div>
-
-                <div>
-                    <picture>
-                        <source media="(max-width: 670px)" srcset="imagens/smoothie-pq.jpeg">
-                        <img src="imagens/smoothie.jpeg" alt="Smoothie" title="Copo de smoothie de banana e morango">
-                    </picture>
                 </div>
             </div>
 
@@ -132,6 +133,14 @@
 
         <article>
             <div>
+
+                <div>
+                    <picture>
+                        <source media="(max-width: 670px)" srcset="imagens/tacos-pq.jpeg">
+                        <img src="imagens/tacos.jpeg" alt="Tacos" title="Tacos quentes em cima de uma mesa ">
+                    </picture>
+                </div>
+
                 <div>
                     <h3>Tacos</h3>
                     <p>Delicie-se com tacos irresistíveis que são incrivelmente fáceis e rápidos de preparar, ideal para uma refeição saborosa sem complicação.</p>
@@ -147,14 +156,7 @@
                         <li>Molho de tomate</li>
                         <li>Creme de leite ou iogurte grego</li>
                     </ul>
-                </div>
-
-                <div>
-                    <picture>
-                        <source media="(max-width: 670px)" srcset="imagens/tacos-pq.jpeg">
-                        <img src="imagens/tacos.jpeg" alt="Tacos" title="Tacos quentes em cima de uma mesa ">
-                    </picture>
-                </div>
+                </div> 
             </div>
 
             <section>
@@ -166,6 +168,14 @@
                 </ul>
             </section>
         </article>
+
+        <br>
+        <hr>
+        <br>
+
+        <p class="veja-tambem">
+            Veja também: <a href="piquenique.html"> Dicas para preparar o melhor piquenique ao ar livre!</a>
+        </p>
     </main>
 
     <footer>
