--- a/holy-kitchen/publique.html
+++ b/holy-kitchen/publique.html
@@ -34,8 +34,8 @@
         
         <div>
             <picture>
-                <source media="(max-width: 670px)" srcset="imagens/publique-pq.jpeg">
-                <img src="imagens/publique.jpeg" alt="Publique sua receita">
+                <source media="(max-width: 670px)" srcset="imagens/receita-pq.jpeg">
+                <img src="imagens/receita.jpeg" alt="Publique sua receita">
             </picture>
             <h2>Publique Sua Receita!</h2>
             <p>Tem uma receita incrível que faz sucesso entre seus amigos e familiares? Compartilhe seu talento culinário com o mundo! Envie sua receita e inspire outros apaixonados por gastronomia a experimentar algo novo e delicioso.</p><br>
@@ -103,6 +103,14 @@
                 </p>
             </form>
         </section>
+
+        <br>
+        <hr>
+        <br>
+
+        <p class="veja-tambem">
+            Veja também: <a href="piquenique.html"> Dicas para preparar o melhor piquenique ao ar livre!</a>
+        </p>
     </main>
 
 
