--- a/holy-kitchen/tomate.html
+++ b/holy-kitchen/tomate.html
@@ -81,6 +81,14 @@
                 </ul>
             </section>
         </article>
+
+        <br>
+        <hr>
+        <br>
+
+        <p class="veja-tambem">
+            Veja também: <a href="piquenique.html"> Dicas para preparar o melhor piquenique ao ar livre!</a>
+        </p>
     </main>
 
 
