--- a/holy-kitchen/piquenique.html
+++ b/holy-kitchen/piquenique.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="imagens/favicon.ico">
     <link rel="stylesheet" href="estilos/header.css">
     <link rel="stylesheet" href="estilos/global.css">
-    <link rel="stylesheet" href="estilos/piquenique.css">
+    <link rel="stylesheet" href="estilos/dicas.css">
 </head>
 
 <body>
@@ -32,6 +32,14 @@
 
     <main>
         <article>
+
+            <div>
+                <picture>
+                    <source media="(max-width: 670px)" srcset="imagens/piquenique-pq.jpg">
+                    <img src="imagens/piquenique.jpg" alt="Piquenique" title="Dicas para o seu piquenique!">
+                </picture>
+            </div>
+
             <div>
                 <h2>Planejando um Piquenique?</h2>
                 <p>Preparar o piquenique perfeito é mais fácil do que você imagina! Confira nossas dicas essenciais de alimentos, utensílios e tudo o que você precisa para aproveitar momentos deliciosos ao ar livre, sem deixar nada de fora.</p>
@@ -40,17 +48,10 @@
             <br>
             <hr>
             <br>
-
-            <div>
-                <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/piquenique-pq.jpg">
-                    <img src="imagens/piquenique.jpg" alt="Piquenique" title="Dicas para o seu piquenique!">
-                </picture>
-            </div>
         </article>
 
-        <section>
-            <h3>Alimentos</h3>
+        <section class="conteudo">
+            <h3 class="linha">Alimentos</h3>
             <ul>
                 <li>Sanduíches ou wraps: fáceis e comer e transportar.</li>
                 <li>Frutas frescas: como uvas, maçãs, morangos ou fatias de melancia.</li>
@@ -62,7 +63,7 @@
                 <li>Sobremesas: brownies, cookies, ou cupcakes.</li>
             </ul>
 
-            <h3>Utensílios</h3>
+            <h3 class="linha">Utensílios</h3>
             <ul>
                 <li>Toalha de piquenique: grande o suficiente para todos se sentarem.</li>
                 <li>Talheres, pratos e copos: preferencialmente reutilizáveis.</li>
@@ -71,7 +72,7 @@
                 <li>Recipientes herméticos: para evitar vazamentos.</li>
             </ul>
 
-            <h2>Extras</h2>
+            <h3 class="linha">Extras</h3>
             <ul>
                 <li>Repelente de insetos e protetor solar.</li>
                 <li>Saco para lixo: para deixar o local limpo depois do piquenique.</li>
