--- a/holy-kitchen/pressa.html
+++ b/holy-kitchen/pressa.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="imagens/favicon.ico">
     <link rel="stylesheet" href="estilos/header.css">
     <link rel="stylesheet" href="estilos/global.css">
-    <link rel="stylesheet" href="estilos/pressa.css">
+    <link rel="stylesheet" href="estilos/dicas.css">
 </head>
 <body>
     <header>
@@ -58,13 +58,13 @@
                     </picture>
                 </div>
 
-                <div>
+                <div class="conteudo">
                     <h3>Espaguete alho e óleo</h3>
                     <p>Um prato clássico, fácil e rápido de preparar, perfeito para qualquer ocasião.</p>
 
                     <strong>Tempo de preparo: 10 minutos</strong>
 
-                    <h4>Ingredientes</h4>
+                    <h4 class="linha">Ingredientes</h4>
                     <ul>
                         <li>200g de macarrão</li>
                         <li>2 dentes de alho picados</li>
@@ -75,8 +75,8 @@
                 </div>    
             </div>
 
-            <section>
-                <h4>Modo de Preparo</h4>
+            <section class="conteudo">
+                <h4 class="linha">Modo de Preparo</h4>
                 <ul>
                     <li>Cozinhe o macarrão conforme as instruções da embalagem.</li>
                     <li>Enquanto o macarrão cozinha, aqueça o azeite em uma frigideira e refogue o alho até dourar.</li>
@@ -99,13 +99,13 @@
                     </picture>
                 </div>
 
-                <div>
+                <div class="conteudo">
                     <h3>Smoothie de morango e banana</h3>
                     <p>Refresque-se com um smoothie cremoso de banana e morango, a combinação perfeita de sabor e praticidade em um só copo!</p>
 
                     <strong>Tempo de preparo: 5 minutos</strong>
 
-                    <h4>Ingredientes</h4>
+                    <h4 class="linha">Ingredientes</h4>
                     <ul>
                         <li>2 bananas</li>
                         <li>2 xícaras de chá de morangos</li>
@@ -116,8 +116,8 @@
                 </div>
             </div>
 
-            <section>
-                <h4>Modo de Preparo</h4>
+            <section class="conteudo">
+                <h4 class="linha">Modo de Preparo</h4>
                 <ul>
                     <li>Corte as bananas e os morangos em pedaços menores.</li>
                     <li>Em um liquidificador, coloque a banana, o morango, o iogurte, o gelo e bata bem. Caso precise, adicione um pouco de água para ajudar a bater.</li>
@@ -141,13 +141,13 @@
                     </picture>
                 </div>
 
-                <div>
+                <div class="conteudo">
                     <h3>Tacos</h3>
                     <p>Delicie-se com tacos irresistíveis que são incrivelmente fáceis e rápidos de preparar, ideal para uma refeição saborosa sem complicação.</p>
 
                     <strong>Tempo de preparo: 10 minutos</strong>
 
-                    <h4>Ingredientes</h4>
+                    <h4 class="linha">Ingredientes</h4>
                     <ul>
                         <li>Tortillas de trigo ou milho</li>
                         <li>Frango desfiado ou carne moída</li>
@@ -159,8 +159,8 @@
                 </div> 
             </div>
 
-            <section>
-                <h4>Modo de Preparo</h4>
+            <section class="conteudo">
+                <h4 class="linha">Modo de Preparo</h4>
                 <ul>
                     <li>Aqueça as tortillas em uma frigideira por alguns segundos.</li>
                     <li>Recheie com frango ou carne, alface, queijo, molho de tomate e creme de leite.</li>
